#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(dnw2, 2, houstar@foxmail.com)
AC_CONFIG_SRCDIR([dnw.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(dnw2,2)
# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC

AC_OUTPUT(Makefile)
